# GoogleMapsClone

./: Cargo.toml  database_build.sql  database_entity_relationship_diagram.drawio
backend/: Cargo.toml
backend/database/: sqlite.db-shm
backend/src/: fetcher.rs  main.rs  member.rs  way.rs
database/: sqlite.db-shm  sqlite.db-wal
frontend/: Cargo.toml  test.html
frontend/process-maps/: Cargo.toml
frontend/process-maps/src/: lib.rs
src/: app.rs  database.rs  fetcher.rs  main.rs  member.rs  node.rs  relation.rs  relations.rs  tag.rs  texture.rs  utils.rs  way.rs  way_node.rs
src/database/: fetchers.rs  inserters.rs  mod.rs  tables.rs
src/open_street_map/: mod.rs  reader.rs  readers.rs
src/osm_entities/: mod.rs  node.rs  relation.rs  tag.rs  way.rs
utils/: deletedata.sql
utils/mapdata/: map (1).osm  test  vejrø  vejrø.osm
