[package]
name = "GoogleMapsClone"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1.38.0", features = ["macros"] }
futures = "0.3"
anyhow = "1.0"
