[package]
name = "GoogleMapsClone"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
quick-xml = "0.36.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1.38.0", features = ["macros"] }
anyhow = "1.0"

wgpu = "22.1.0"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"

[dependencies.image]
version = "0.25"
features = ["png", "jpeg"]
